NetBSD Problem Report #39426
From www@NetBSD.org Fri Aug 29 00:38:25 2008
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
by narn.NetBSD.org (Postfix) with ESMTP id AFA6863BC3B
for <gnats-bugs@gnats.netbsd.org>; Fri, 29 Aug 2008 00:38:25 +0000 (UTC)
Message-Id: <20080829003825.822E163BC30@narn.NetBSD.org>
Date: Fri, 29 Aug 2008 00:38:25 +0000 (UTC)
From: nand@mac.com
Reply-To: nand@mac.com
To: gnats-bugs@NetBSD.org
Subject: serial console hangs shortly after boot on a LROUTER
X-Send-Pr-Version: www-1.0
>Number: 39426
>Category: port-hpcmips
>Synopsis: serial console hangs shortly after boot on a LROUTER
>Confidential: no
>Severity: critical
>Priority: high
>Responsible: port-hpcmips-maintainer
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Fri Aug 29 00:40:00 +0000 2008
>Closed-Date: Fri Aug 29 12:09:22 +0000 2008
>Last-Modified: Fri Aug 29 12:10:03 +0000 2008
>Originator: Nozomu Ando
>Release: NetBSD-current 4.99.72
>Organization:
>Environment:
NetBSD hpcmips1 4.99.72 NetBSD 4.99.72 (LR) #0: Thu Aug 28 21:28:58 JST 2008 nand@mika:/w/netbsd/hpcmips/080828/obj/sys/arch/hpcmips/compile/LR hpcmips
>Description:
The system always hangs at the first "date" command of /etc/rc script on booting sequence.
This machine (L-Router) have a serial console.
>How-To-Repeat:
boot with a recent current-kernel
>Fix:
The problem is fixed here with the following patch:
RCS file: /cvsroot/src/sys/arch/hpcmips/vr/com_vrip.c,v
retrieving revision 1.20
diff -u -r1.20 com_vrip.c
--- sys/arch/hpcmips/vr/com_vrip.c 14 Mar 2008 15:09:10 -0000 1.20
+++ sys/arch/hpcmips/vr/com_vrip.c 29 Aug 2008 00:26:22 -0000
@@ -197,7 +197,7 @@
DPRINTF(("Establish intr"));
if (!vrip_intr_establish(va->va_vc, va->va_unit, 0, IPL_TTY,
- comintr, self)) {
+ comintr, sc)) {
aprint_error_dev(self, "can't map interrupt line.\n");
}
>Release-Note:
>Audit-Trail:
State-Changed-From-To: open->closed
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Fri, 29 Aug 2008 21:09:22 +0900
State-Changed-Why:
Fixed, thanks.
From: Izumi Tsutsui <tsutsui@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/39426 CVS commit: src/sys/arch/hpcmips/vr
Date: Fri, 29 Aug 2008 12:08:30 +0000 (UTC)
Module Name: src
Committed By: tsutsui
Date: Fri Aug 29 12:08:30 UTC 2008
Modified Files:
src/sys/arch/hpcmips/vr: com_vrip.c
Log Message:
Fix a fallout of device_t/softc split for com(4) devices.
Per PR port-hpcmips/39426 from Nozomu Ando.
To generate a diff of this commit:
cvs rdiff -r1.20 -r1.21 src/sys/arch/hpcmips/vr/com_vrip.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.