Fix a fallout of device_t/softc split for com(4) devices. Per PR port-hpcmips/39426 from Nozomu Ando.